--- a/app/assets/stylesheets/components/_media_queries.scss
+++ b/app/assets/stylesheets/components/_media_queries.scss
@@ -15,17 +15,17 @@
     display: none;
   }
 
-  .product-card {
+  // .product-card {
 
-    .product-card-image {
-      img {
-        height: auto;
-        width: 100%;
-        object-fit: fill;
-        max-height: 60vh;
-      }
-    }
-  }
+  //   .product-card-image {
+  //     img {
+  //       height: auto;
+  //       width: 100%;
+  //       object-fit: fill;
+  //       max-height: 60vh;
+  //     }
+  //   }
+  // }
 
   .suggested-lists-container {
 
