--- a/app/assets/stylesheets/components/_product_card.scss
+++ b/app/assets/stylesheets/components/_product_card.scss
@@ -23,4 +23,23 @@
       max-height: 100vw;
     }
   }
+
+
+  .image-container {
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%; /* This will make the container a square */
+    background-color: white;
+    position: relative;
+  }
+
+  .image-container img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+
 }
